torch-sys/src/c_generated.rs

    pub fn atg_linspace_out(result_: *mut C_tensor, start_: *mut C_scalar, end_: *mut C_scalar) -> *mut *mut C_tensor;
    pub fn atg_linspace_out1(result_: *mut C_tensor, start_: *mut C_scalar, end_: *mut C_scalar, steps_: i64) -> *mut *mut C_tensor;
    pub fn atg_log(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_log10(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_log10_(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_log10_out(result_: *mut C_tensor, self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_log1p(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_log1p_(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_log1p_out(result_: *mut C_tensor, self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_log2(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_log2_(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_log2_out(result_: *mut C_tensor, self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_log_(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_log_normal_(self_: *mut C_tensor, mean_: f64, std_: f64) -> *mut *mut C_tensor;
    pub fn atg_log_out(result_: *mut C_tensor, self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_log_sigmoid(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_log_sigmoid_backward(grad_output_: *mut C_tensor, self_: *mut C_tensor, buffer_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_log_sigmoid_backward_out(grad_input_: *mut C_tensor, grad_output_: *mut C_tensor, self_: *mut C_tensor, buffer_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_log_sigmoid_out(output_: *mut C_tensor, self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_log_softmax(self_: *mut C_tensor, dim_: i64) -> *mut *mut C_tensor;
    pub fn atg_log_softmax1(self_: *mut C_tensor, dim_: i64, dtype_: c_int) -> *mut *mut C_tensor;
    pub fn atg_logdet(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_logspace(start_: *mut C_scalar, end_: *mut C_scalar, options_kind: c_int, options_device: c_int) -> *mut *mut C_tensor;
    pub fn atg_logspace1(start_: *mut C_scalar, end_: *mut C_scalar, steps_: i64, options_kind: c_int, options_device: c_int) -> *mut *mut C_tensor;
    pub fn atg_logspace_out(result_: *mut C_tensor, start_: *mut C_scalar, end_: *mut C_scalar) -> *mut *mut C_tensor;
    pub fn atg_logspace_out1(result_: *mut C_tensor, start_: *mut C_scalar, end_: *mut C_scalar, steps_: i64) -> *mut *mut C_tensor;
    pub fn atg_logsumexp(self_: *mut C_tensor, dim_: i64, keepdim_: c_int) -> *mut *mut C_tensor;
    pub fn atg_logsumexp_out(result_: *mut C_tensor, self_: *mut C_tensor, dim_: i64, keepdim_: c_int) -> *mut *mut C_tensor;
    pub fn atg_lstm(input_: *mut C_tensor, hx_data: *const *mut C_tensor, hx_len: c_int, params_data: *const *mut C_tensor, params_len: c_int, has_biases_: c_int, num_layers_: i64, dropout_: f64, train_: c_int, bidirectional_: c_int, batch_first_: c_int) -> *mut *mut C_tensor;
    pub fn atg_lstm1(data_: *mut C_tensor, batch_sizes_: *mut C_tensor, hx_data: *const *mut C_tensor, hx_len: c_int, params_data: *const *mut C_tensor, params_len: c_int, has_biases_: c_int, num_layers_: i64, dropout_: f64, train_: c_int, bidirectional_: c_int) -> *mut *mut C_tensor;
    pub fn atg_lstm_cell(input_: *mut C_tensor, hx_data: *const *mut C_tensor, hx_len: c_int, w_ih_: *mut C_tensor, w_hh_: *mut C_tensor, b_ih_: *mut C_tensor, b_hh_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_lt(self_: *mut C_tensor, other_: *mut C_scalar) -> *mut *mut C_tensor;
    pub fn atg_lt1(self_: *mut C_tensor, other_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_lt_(self_: *mut C_tensor, other_: *mut C_scalar) -> *mut *mut C_tensor;
    pub fn atg_lt_1(self_: *mut C_tensor, other_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_lt_out(result_: *mut C_tensor, self_: *mut C_tensor, other_: *mut C_scalar) -> *mut *mut C_tensor;
    pub fn atg_lt_out1(result_: *mut C_tensor, self_: *mut C_tensor, other_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_margin_ranking_loss(input1_: *mut C_tensor, input2_: *mut C_tensor, target_: *mut C_tensor, margin_: f64, reduction_: i64) -> *mut *mut C_tensor;
    pub fn atg_masked_fill_(self_: *mut C_tensor, mask_: *mut C_tensor, value_: *mut C_scalar) -> *mut *mut C_tensor;
    pub fn atg_masked_fill_1(self_: *mut C_tensor, mask_: *mut C_tensor, value_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_masked_scatter_(self_: *mut C_tensor, mask_: *mut C_tensor, source_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_masked_select(self_: *mut C_tensor, mask_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_masked_select_out(result_: *mut C_tensor, self_: *mut C_tensor, mask_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_matmul(self_: *mut C_tensor, other_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_matmul_out(result_: *mut C_tensor, self_: *mut C_tensor, other_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_matrix_power(self_: *mut C_tensor, n_: i64) -> *mut *mut C_tensor;
    pub fn atg_matrix_rank(self_: *mut C_tensor, symmetric_: c_int) -> *mut *mut C_tensor;
    pub fn atg_matrix_rank1(self_: *mut C_tensor, tol_: f64, symmetric_: c_int) -> *mut *mut C_tensor;
    pub fn atg_max(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_max1(self_: *mut C_tensor, other_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_max2(self_: *mut C_tensor, dim_: i64, keepdim_: c_int) -> *mut *mut C_tensor;
    pub fn atg_max_out(result_: *mut C_tensor, self_: *mut C_tensor, other_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_max_out1(max_: *mut C_tensor, max_values_: *mut C_tensor, self_: *mut C_tensor, dim_: i64, keepdim_: c_int) -> *mut *mut C_tensor;
    pub fn atg_max_pool1d(self_: *mut C_tensor, kernel_size_data: *const i64, kernel_size_len: c_int, stride_data: *const i64, stride_len: c_int, padding_data: *const i64, padding_len: c_int, dilation_data: *const i64, dilation_len: c_int, ceil_mode_: c_int) -> *mut *mut C_tensor;
    pub fn atg_max_pool1d_with_indices(self_: *mut C_tensor, kernel_size_data: *const i64, kernel_size_len: c_int, stride_data: *const i64, stride_len: c_int, padding_data: *const i64, padding_len: c_int, dilation_data: *const i64, dilation_len: c_int, ceil_mode_: c_int) -> *mut *mut C_tensor;
    pub fn atg_max_pool2d(self_: *mut C_tensor, kernel_size_data: *const i64, kernel_size_len: c_int, stride_data: *const i64, stride_len: c_int, padding_data: *const i64, padding_len: c_int, dilation_data: *const i64, dilation_len: c_int, ceil_mode_: c_int) -> *mut *mut C_tensor;
    pub fn atg_max_pool2d_with_indices(self_: *mut C_tensor, kernel_size_data: *const i64, kernel_size_len: c_int, stride_data: *const i64, stride_len: c_int, padding_data: *const i64, padding_len: c_int, dilation_data: *const i64, dilation_len: c_int, ceil_mode_: c_int) -> *mut *mut C_tensor;
    pub fn atg_max_pool2d_with_indices_backward(grad_output_: *mut C_tensor, self_: *mut C_tensor, kernel_size_data: *const i64, kernel_size_len: c_int, stride_data: *const i64, stride_len: c_int, padding_data: *const i64, padding_len: c_int, dilation_data: *const i64, dilation_len: c_int, ceil_mode_: c_int, indices_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_max_pool2d_with_indices_backward_out(grad_input_: *mut C_tensor, grad_output_: *mut C_tensor, self_: *mut C_tensor, kernel_size_data: *const i64, kernel_size_len: c_int, stride_data: *const i64, stride_len: c_int, padding_data: *const i64, padding_len: c_int, dilation_data: *const i64, dilation_len: c_int, ceil_mode_: c_int, indices_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_max_pool2d_with_indices_out(output_: *mut C_tensor, indices_: *mut C_tensor, self_: *mut C_tensor, kernel_size_data: *const i64, kernel_size_len: c_int, stride_data: *const i64, stride_len: c_int, padding_data: *const i64, padding_len: c_int, dilation_data: *const i64, dilation_len: c_int, ceil_mode_: c_int) -> *mut *mut C_tensor;
    pub fn atg_max_pool3d(self_: *mut C_tensor, kernel_size_data: *const i64, kernel_size_len: c_int, stride_data: *const i64, stride_len: c_int, padding_data: *const i64, padding_len: c_int, dilation_data: *const i64, dilation_len: c_int, ceil_mode_: c_int) -> *mut *mut C_tensor;
    pub fn atg_max_pool3d_with_indices(self_: *mut C_tensor, kernel_size_data: *const i64, kernel_size_len: c_int, stride_data: *const i64, stride_len: c_int, padding_data: *const i64, padding_len: c_int, dilation_data: *const i64, dilation_len: c_int, ceil_mode_: c_int) -> *mut *mut C_tensor;
    pub fn atg_max_pool3d_with_indices_backward(grad_output_: *mut C_tensor, self_: *mut C_tensor, kernel_size_data: *const i64, kernel_size_len: c_int, stride_data: *const i64, stride_len: c_int, padding_data: *const i64, padding_len: c_int, dilation_data: *const i64, dilation_len: c_int, ceil_mode_: c_int, indices_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_max_pool3d_with_indices_backward_out(grad_input_: *mut C_tensor, grad_output_: *mut C_tensor, self_: *mut C_tensor, kernel_size_data: *const i64, kernel_size_len: c_int, stride_data: *const i64, stride_len: c_int, padding_data: *const i64, padding_len: c_int, dilation_data: *const i64, dilation_len: c_int, ceil_mode_: c_int, indices_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_max_pool3d_with_indices_out(output_: *mut C_tensor, indices_: *mut C_tensor, self_: *mut C_tensor, kernel_size_data: *const i64, kernel_size_len: c_int, stride_data: *const i64, stride_len: c_int, padding_data: *const i64, padding_len: c_int, dilation_data: *const i64, dilation_len: c_int, ceil_mode_: c_int) -> *mut *mut C_tensor;
    pub fn atg_max_unpool2d(self_: *mut C_tensor, indices_: *mut C_tensor, output_size_data: *const i64, output_size_len: c_int) -> *mut *mut C_tensor;
    pub fn atg_max_unpool2d_backward(grad_output_: *mut C_tensor, self_: *mut C_tensor, indices_: *mut C_tensor, output_size_data: *const i64, output_size_len: c_int) -> *mut *mut C_tensor;
    pub fn atg_max_unpool2d_backward_out(grad_input_: *mut C_tensor, grad_output_: *mut C_tensor, self_: *mut C_tensor, indices_: *mut C_tensor, output_size_data: *const i64, output_size_len: c_int) -> *mut *mut C_tensor;
    pub fn atg_max_unpool2d_out(output_: *mut C_tensor, self_: *mut C_tensor, indices_: *mut C_tensor, output_size_data: *const i64, output_size_len: c_int) -> *mut *mut C_tensor;
    pub fn atg_max_unpool3d(self_: *mut C_tensor, indices_: *mut C_tensor, output_size_data: *const i64, output_size_len: c_int, stride_data: *const i64, stride_len: c_int, padding_data: *const i64, padding_len: c_int) -> *mut *mut C_tensor;
    pub fn atg_max_unpool3d_backward(grad_output_: *mut C_tensor, self_: *mut C_tensor, indices_: *mut C_tensor, output_size_data: *const i64, output_size_len: c_int, stride_data: *const i64, stride_len: c_int, padding_data: *const i64, padding_len: c_int) -> *mut *mut C_tensor;
    pub fn atg_max_unpool3d_backward_out(grad_input_: *mut C_tensor, grad_output_: *mut C_tensor, self_: *mut C_tensor, indices_: *mut C_tensor, output_size_data: *const i64, output_size_len: c_int, stride_data: *const i64, stride_len: c_int, padding_data: *const i64, padding_len: c_int) -> *mut *mut C_tensor;
    pub fn atg_max_unpool3d_out(output_: *mut C_tensor, self_: *mut C_tensor, indices_: *mut C_tensor, output_size_data: *const i64, output_size_len: c_int, stride_data: *const i64, stride_len: c_int, padding_data: *const i64, padding_len: c_int) -> *mut *mut C_tensor;
    pub fn atg_max_values(self_: *mut C_tensor, dim_: i64, keepdim_: c_int) -> *mut *mut C_tensor;
    pub fn atg_mean(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_mean1(self_: *mut C_tensor, dtype_: c_int) -> *mut *mut C_tensor;
    pub fn atg_mean2(self_: *mut C_tensor, dim_: i64, keepdim_: c_int) -> *mut *mut C_tensor;
